@@ -1,1 +1,0 @@
-django-nose==1.1
