@@ -13,6 +13,7 @@ to remove PIL completely, then install the new version of Photologue.
   environments easier.
 - Allow editing of Photo added date (temp way of sorting photos).
 - Added an example project to help people wanting to contribute to the project.
+- Fixed buggy Travis CI script.
 
 2.5 (2012-12-13)
 ----------------
